# grc-sdk

./: LICENSE  README.md  pyproject.toml  requirements.txt
grc/: __init__.py
grc/file_service/: __init__.py  hasher.py
tests/: test_hasher.py
